Fix alignment with the reference image

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   font-family: Merriweather, serif;
   line-height: 1.5;
-  margin: 1.5rem 0 0;
+  margin: 1rem 0 .5rem;
   padding: 0;
 }
 
